# tablers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pdm.toml  pylock.toml  pyproject.toml
.github/workflows/: CI.yml  docs.yml  release.yml
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/getting_started/: installation.md  quickstart.md
docs/reference/: api.md  settings.md
docs/stylesheets/: extra.css
docs/usage/: advanced.md  index.md
python/tablers/: __init__.py  tablers.pyi
scripts/: post-build.py  pre-build.py
src/: chars.rs  clusters.rs  edges.rs  lib.rs  objects.rs  pages.rs  settings.rs  tables.rs  test_utils.rs  words.rs
tests/python/: __init__.py  conftest.py  test_document.py  test_edges.py  test_runtime.py  test_settings.py  test_tables.py
