[package]
name = "tablers"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tablers"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
once_cell = "1.21.3"
ordered-float = "5.1.0"
pdfium-render = "0.8.37"
pyo3 = { version = "0.27", features = ["abi3-py310"] }
