[project]
name = "tablers"
requires-python = ">=3.10"
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
description = "A blazingly fast PDF table extraction library powered by Rust"
authors = [
    { name = "monchin", email = "pazzinter@126.com" }
]
dynamic = ["version"]
license = {text = "MIT"}
keywords = ["pdf", "table-extraction"]
readme = "README.md"
Changelog = "https://github.com/monchin/tablers/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project.urls]
Homepage = "https://github.com/monchin/tablers"
Repository = "https://github.com/monchin/tablers"
Documentation = "https://monchin.github.io/tablers/"

[dependency-groups]
stub = [
    "typing-extensions>=4.15.0; python_version < \"3.11\"",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs-material>=9.5.0",
]

[tool.maturin]
python-source = "python"
compatibility = "manylinux_2_34"

[tool.pdm.scripts]
fmt = {composite = ["cargo fmt", "ruff check . --select I --fix", "ruff format ."]}
lint = {composite = ["cargo check", "cargo clippy", "ruff check .", "ty check ."]}
test = {composite = ["cargo test", "pytest tests/python"]}
pre_build = "python scripts/pre-build.py"
post_build = "python scripts/post-build.py"
docs = "mkdocs serve"
docs-build = "mkdocs build"

[tool.ruff]
line-length = 100
include = ["python/**.py", "python/**.pyi", "scripts/**", "tests/**.py"]

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ty.rules]
possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "warn"

[tool.ty.src]
include = ["python/tablers"]

[tool.ty.environment]
python = "./.venv"
